# PokemonProject

./: Architektur.txt  CMakeLists.txt  README.md  README.txt  README_abgabe.txt  main.cpp  map_basic.txt
Game/: Game.cpp  Game.h  Monster.cpp  Monster.h  Player.cpp  Player.h
console-window-master/: ConsoleWindow.h  Demo.pro
copyme/: README-copyme.txt  map_advanced.txt  map_boss.txt  map_test.txt
copyme/console-window-master/: ConsoleDemo.cpp  ConsoleDemo.h  ConsoleWindow.cpp  ConsoleWindow.h  main.cpp
gui/: Gui.cpp  Gui.h
